--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,11 @@
 
 
     <!-- Contact Start -->
-    <div class="container-fluid pt-5">
+   
+    <div class="container footer text-white mt-5 pt-5 px-5 position-relative overlay-top">
+        <div class="row align-items-center">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title"> 
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Contact Us</h4>
                 <h1 class="display-4">Feel Free To Contact</h1>
             </div>
@@ -77,13 +79,13 @@
                     <i class="fa fa-2x fa-map-marker-alt mb-3 text-primary"></i>
                     <h4 class="font-weight-bold">Address</h4>
                     
-                    <p>Location, City, Country</p>
+                    <p>Rynek, Rzeszow, Poland</p>
                 </div>
                 
                 <div class="col-sm-4 text-center mb-3">
                     <i class="fa fa-2x fa-phone-alt mb-3 text-primary"></i>
                     <h4 class="font-weight-bold">Phone</h4>
-                    <p>+012 345 6789</p>
+                    <p>+48 000 120 555</p>
                 </div>
                 <div class="col-sm-4 text-center mb-3">
                     <i class="far fa-2x fa-envelope mb-3 text-primary"></i>
@@ -92,12 +94,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 pb-5">
+                <div class="col-md-6 pb-4">
 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d164089.
                 16294957625!2d21.81162843494287!3d50.01335749636489!2m3!1f0!2f0!3f0!3m2!1i1024
                 !2i768!4f13.1!3m3!1m2!1s0x473cfae3cc14d449%3A0xd2240d31b33eb2ed!2zUnplc3rDs3c!
-                5e0!3m2!1sen!2spl!4v1681415371839!5m2!1sen!2spl" width="550" height="430"
+                5e0!3m2!1sen!2spl!4v1681415371839!5m2!1sen!2spl" width="500" height="430"
                  style="border:0;" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
@@ -136,6 +138,7 @@
             </div>
         </div>
     </div>
+</div>
     <!-- Contact End -->
 
 
@@ -144,19 +147,19 @@
         <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Location, City, Country</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Rynek, Rzeszow, Poland</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+48 000 120 666</p>
                 <p class="m-0"><i class="fa fa-envelope mr-2"></i>info@example.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Follow Us</h4>
-                <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
+                <p></p>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://freewebsitecode.com"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://freewebsitecode.com"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://freewebsitecode.com"><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://youtube.com/freewebsitecode/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square" href=""><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href=""><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
