--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
             </div>
         </nav>
     </div>
-    <!-- Navbar End -->
+    <!-- Navbar End #96968E -->
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
         <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                 <img class="w-100" src="img/carousel-1.jpg" alt="Image"> 
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
                         <h1 class="display-1 text-white m-0">Coffee</h1>
-                        <h2 class="text-white m-0">* SINCE 2020 *</h2>
+                        <h2 class="text-white m-0">* SINCE 2023 *</h2>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" >
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
                         <h1 class="display-1 text-white m-0">Coffee</h1>
-                        <h2 class="text-white m-0">* SINCE 2020 *</h2>
+                        <h2 class="text-white m-0">* SINCE 2023 *</h2>
                     </div>
                 </div>
             </div>
@@ -84,18 +84,18 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5">
+    <div class="container footer text-white mt-5 pt-5 px-5 position-relative overlay-top">
+        <div class="row align-items-center">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title"> 
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">About Us</h4>
-                <h1 class="display-4">Serving Since 1950</h1>
+                <h1 class="display-4">Serving Since 2023</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Our Story</h1>
-                    <h5 class="mb-3"></h5>
+                    <h5 class="mb-3">In a quaint town, nestled between rolling hills, Coffee Shop emerged as a beacon of aromatic delight. Its doors welcomed locals and travelers alike, offering a refuge where stories unfolded over steaming cups of coffee. From early morning meetings to late-night conversations, Coffee Shop became the backdrop for countless tales, leaving an indelible mark on the hearts of all who entered.</h5>
                     <p></p>
-                    <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -105,19 +105,19 @@
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Our Vision</h1>
                     <p></p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i></h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i></h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i></h5>
-                    <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                    <h5 class="mb-3">At Coffee Shop, our vision is simple yet profound: to create a haven where the love for coffee meets exceptional hospitality. We strive to be a place where people can escape the chaos of everyday life and find solace in the perfect cup of coffee. Our vision is to provide a warm and inviting atmosphere, where connections are forged, stories are shared, and moments of joy are savored with every sip. Welcome to Coffee Shop, where coffee becomes an experience to treasure.</h5>
+                   
                 </div>
             </div>
         </div>
     </div>
+</div>
     <!-- About End -->
 
 
     <!-- Service Start -->
-    <div class="container-fluid pt-5">
+    <div class="container footer text-white mt-5 pt-5 px-5 position-relative overlay-top">
+        <div class="row align-items-center">
         <div class="container">
             <div class="section-title">
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Our Services</h4>
@@ -171,6 +171,7 @@
             </div>
         </div>
     </div>
+</div>
     <!-- Service End -->
 
 
@@ -179,7 +180,7 @@
         <div class="container py-5">
             <h1 class="display-3 text-primary mt-3">50% OFF</h1>
             <h1 class="text-white mb-3">Sunday Special Offer</h1>
-            <h4 class="text-white font-weight-normal mb-4 pb-3">Only for Sunday from 1st Jan to 30th Jan</h4>
+            <h4 class="text-white font-weight-normal mb-4 pb-3"></h4>
             <form class="form-inline justify-content-center mb-4">
                 <div class="input-group">
                     <input type="text" class="form-control p-4" placeholder="Your Email" style="height: 60px;">
@@ -194,9 +195,11 @@
 
 
     <!-- Menu Start -->
-    <div class="container-fluid pt-5">
+
+    <div class="container footer text-white mt-5 pt-5 px-5 position-relative overlay-top">
+        <div class="row align-items-center">
         <div class="container">
-            <div class="section-title">
+            <div class="section-title"> 
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Menu & Pricing</h4>
                 <h1 class="display-4">Competitive Pricing</h1>
             </div>
@@ -270,6 +273,7 @@
             </div>
         </div>
     </div>
+</div>
     <!-- Menu End -->
 
 
@@ -286,14 +290,12 @@
                             </div>
                             <p class="text-white"></p>
                             <ul class="list-inline text-white m-0">
-                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i></li>
-                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i></li>
-                                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i></li>
+                             
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                    <div class="text-center p-5" style="background: rgba(51, 33, 29, .8);">     
+                    <div class="text-center p-5" style="background: rgba(150, 150, 142, 0.9);">     
                             <h1 class="text-white mb-4 mt-5">Book Your Table</h1>
                             <form class="mb-5">
                                 <div class="form-group">
@@ -337,18 +339,15 @@
     <!-- Reservation End -->
 
 
-    <!-- Testimonial Start -->
-
-    <!-- Testimonial End -->
-
+  
 
     <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
         <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Location, City, Country</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Rynek, Rzeszow, Poland</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+48 000 120 555</p>
                 <p class="m-0"><i class="fa fa-envelope mr-2"></i>info@example.com</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -385,8 +384,6 @@
             </div>
         </div>
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(205, 200, 199, 0.8) !important;">
-            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="">Domain</a>. All Rights Reserved.</a></p>
-            <p class="m-0 text-white">Designed by <a class="font-weight-bold" href=""></a></p>
         </div>
     </div>
     <!-- Footer End -->
